Fix Readme again

--- a/README
+++ b/README
@@ -18,7 +18,7 @@ once an API becomes available for it.
   * The ability to grab freeform areas of your screen
   * The ability to select and grab specific widgets in a window
   * No "wait for a click before taking a shot" mode (we have a
-    milisecond accuracy timer)
+    millisecond accuracy timer)
   * No Win32 or Mac OS support yet
   * No KIPI integration yet (adding that is a priority right now)
   * The ability to take screenshots on platforms where OpenGL
@@ -34,7 +34,7 @@ Note that KScreenGenie will work even if you use KWin without
 compositing, or if you use another window manager (like OpenBox).
 All you need is to have the 3D drivers installed.
 
-2) What's cooler?
+3) What's cooler?
 
   * More robust multimonitor screenshot support.
 
