--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -1,49 +1,258 @@
 <?xml version="1.0" ?>
-<!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.2-Based Variant V1.1//EN" "dtd/kdex.dtd" [
+<!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.5-Based Variant V1.1//EN" "dtd/kdedbx45.dtd" [
+  <!ENTITY kscreengenie "KScreenGenie">
   <!ENTITY kappname "&kscreengenie;">
   <!ENTITY package "kdegraphics">
   <!ENTITY % addindex "IGNORE">
-  <!ENTITY % English "INCLUDE">
+  <!ENTITY % English "INCLUDE" > <!-- change language only here -->
+  <!ENTITY Boudhayan.Gupta "<personname><firstname>Boudhayan</firstname><surname>Gupta</surname></personname>">
+  <!ENTITY Boudhayan.Gupta.mail "<email>me@BaloneyGeek.com</email>">
 ]>
 
-<bookinfo>
-<title>The &kscreengenie; Handbook</title>
+<book id="kscreengenie" lang="&language;">
+	<bookinfo>
+		<title>The &kscreengenie; Handbook</title>
 
-<authorgroup>
-<author>
-<personname>
-<firstname>Boudhayan</firstname>
-<othername></othername>
-<surname>Gupta</surname>
-</personname>
-<email>me@BaloneyGeek.com</email>
-</author>
-</authorgroup>
+		<authorgroup>
+			<author>
+				&Boudhayan.Gupta;
+				&Boudhayan.Gupta.mail;
+			</author>
 
-<!-- TRANS:ROLES_OF_TRANSLATORS -->
+			<othercredit role="developer">
+				<author>
+					&Boudhayan.Gupta;
+					&Boudhayan.Gupta.mail;
+				</author>
+			</othercredit>
 
-<copyright>
-<year>2015</year>
-<holder>Boudhayan Gupta</holder>
-</copyright>
-<legalnotice>&FDLNotice;</legalnotice>
+			<!-- TRANS:ROLES_OF_TRANSLATORS -->
+		</authorgroup>
 
-<date>2015-04-20</date>
-<releaseinfo>1.0.0</releaseinfo>
+		<copyright><year>1997-2000</year><holder>&Richard.J.Moore;</holder></copyright>
+		<copyright><year>2000</year><holder>&Matthias.Ettrich;</holder></copyright>
+		<copyright><year>2015</year><holder>&Boudhayan.Gupta;</holder></copyright>
 
-<!-- Abstract about this handbook -->
+		<legalnotice>&FDLNotice;</legalnotice>
 
-<abstract>
-<para>
-&kscreengenie; .
-</para>
-</abstract>
+		<date>2015-06-12</date>
+		<releaseinfo>1.9.96</releaseinfo>
 
-<keywordset>
-<keyword>KDE</keyword>
-<keyword>kdeutils</keyword>
-<keyword>Kapp</keyword>
-<keyword>nothing</keyword>
-<keyword>nothing else</keyword>
-</keywordset>
-</bookinfo> 
+		<abstract>
+			<para>&kscreengenie; is a simple application for capturing desktop screenshots. It can capture images of the entire desktop, a single monitor, the currently active window, or a rectangular region of the screen. The images can then be printed, sent to other applications for manipulation, or quickly be saved as-is.</para>
+		</abstract>
+
+		<keywordset>
+			<keyword>KDE</keyword>
+			<keyword>&kscreengenie;</keyword>
+			<keyword>kdegraphics</keyword>
+			<keyword>screenshot</keyword>
+			<keyword>screen capture</keyword>
+			<keyword>screen grab</keyword>
+		</keywordset>
+	</bookinfo>
+
+	<chapter id="introduction">
+	    <title>Introduction</title>
+
+	    <para>&kscreengenie; is a simple application for capturing desktop screenshots. It can capture images of the entire desktop, a single monitor, the currently active window, or a rectangular region of the screen. The images can then be printed, sent to other applications for manipulation, or quickly be saved as-is.</para>
+
+	    <para>Please report any problems or feature requests to the <ulink url="http://bugs.kde.org/">&kde; Bug Tracking System</ulink>.</para>
+	</chapter>
+
+	<chapter id="starting">
+		<title>Starting &kscreengenie;</title>
+
+		<para>&kscreengenie; can be started in a variety of ways, as described below:</para>
+
+		<itemizedlist>
+			<listitem>
+				<para>In the application launcher menu, &kscreengenie; can be found at <menuchoice><guisubmenu>Applications</guisubmenu><guisubmenu>Graphics</guisubmenu><guimenuitem>Screenshot Capture Utility &kscreengenie;</guimenuitem></menuchoice></para>
+			</listitem>
+			<listitem>
+				<para>Pressing the <keycap>Print Screen</keycap> button on the keyboard will immediately launch &kscreengenie;. Additionally, two more keyboard shortcuts are available. Pressing <keycombo action="simul">&Alt;<keycap>Print Screen</keycap></keycombo> will take a screenshot of the active window and save it in your default Pictures folder without showing the GUI, while pressing <keycombo action="simul">&Shift;<keycap>Print Screen</keycap></keycombo> will take a screenshot of your entire desktop and save it in youre default Pictures folder without showing the GUI.</para>
+			</listitem>
+			<listitem>
+				<para>The mini command line &krunner; (invoked with <keycombo action="simul">&Alt;<keycap>F2</keycap></keycombo>) may also be used to start &kscreengenie;.</para>
+			</listitem>
+			<listitem>
+				<para> &kscreengenie; can be started from the command-line. &kscreengenie; has an extensive set of command-line options, including a background mode which can be used to script the capture of screenshots without showing the GUI or requiring user interaction.</para>
+
+				<para>To start &kscreengenie; from the command prompt, type in:</para>
+				<screen width="40">
+					<prompt>%</prompt> <command>kscreengenie &amp;</command>
+				</screen>
+
+				<para>To view the full list of command-line options and their explanation, type in:</para>
+				<screen width="40">
+					<prompt>%</prompt> <command>kscreengenie --help</command>
+				</screen>
+			</listitem>
+		</itemizedlist>
+	</chapter>
+
+	<chapter id="using">
+		<title>Using &kscreengenie;</title>
+
+		<para>Once &kscreengenie; starts, you will see a window like the following:
+			<mediaobject>
+				<imageobject>
+					<imagedata fileref="MainWindow.png" format="PNG"/>
+				</imageobject>
+				<textobject>
+					<phrase>&kscreengenie; Main Window</phrase>
+				</textobject>
+			</mediaobject>
+		</para>
+
+		<para>&kscreengenie; grabs an image of your entire desktop immediately after it is started, but before it displays itself on screen. This allows you to quickly create full-desktop screenshot images.</para>
+
+		<para>The snapshot taken by &kscreengenie; is displayed in the preview window, which is located on the left-hand side of the &kscreengenie; application window.</para>
+
+		<para>To quickly save the image and quit &kscreengenie; press the <guibutton>Save &amp; Exit</guibutton> (<keycombo action="simul">&Ctrl;<keycap>Q</keycap></keycombo>) button. This saves the image as a PNG file in your default Pictures folder, and exits the application immediately.</para>
+
+		<para>The image can be saved by clicking on the <guibutton>Save As...</guibutton> (<keycombo action="simul">&Ctrl;<keycap>S</keycap></keycombo>) button. This opens the standard &kde; save dialog, where you can choose the filename, the folder location, and the format that your screenshot will be saved in. You may edit the filename to anything you wish, including the name of a previously saved screenshot.</para>
+
+		<sect1 id="taking-screenshot">
+			<title>Taking A Screenshot</title>
+
+			<para>To discard the current screenshot and take another screenshot, press the <guibutton>Take New Screenshot</guibutton> (<keycombo action="simul">&Ctrl;<keycap>N</keycap></keycombo>) button.</para>
+
+			<para>You may configure certain options on the right hand side of the application window before taking a new screenshot. These options allow you to select the area of the screen that is to be captured, set a delay before capturing the image, and configure whether the mouse cursor and/or the window decorations should be captured along with the screenshot.</para>
+
+			<sect2>
+				<title>Capture Mode</title>
+
+				<para>The capture mode settings allow you to set the area of the screen that should be captured, and whether there should be a delay between pressing the <guibutton>Take New Screenshot</guibutton> (<keycombo action="simul">&Ctrl;<keycap>N</keycap></keycombo>) button and taking the screenshot.</para>
+
+				<para>The <guilabel>Capture Area</guilabel> combo-box allows you to set the area of the screen that should be captured. There are four options to select from, as described below.</para>
+
+				<itemizedlist>
+					<listitem>
+						<para>The <guilabel>Full Screen (All Monitors)</guilabel> option takes a screenshot of your entire desktop, spread across all the outputs, including all the monitors, projectors etc.</para>
+					</listitem>
+					<listitem>
+						<para>The <guilabel>Current Screen</guilabel> option takes a screenshot of the output that currently contains the mouse curosr.</para>
+					</listitem>
+					<listitem>
+						<para>The <guilabel>Active Window</guilabel> option takes a screenshot of the window that currently has focus. It is advisable to use a delay with this mode, to give you time to select and activate a window before the screenshot is taken.</para>
+					</listitem>
+					<listitem>
+						<para>The <guilabel>Rectangular Region</guilabel> option allows you to select a rectangular region of your desktop with your mouse. This region may be spread across different outputs.</para>
+
+						<para>This mode does not immediately take a screenshot but allows you to draw a rectangle on your screen, which can be moved and resized as needed. Once the desired selection rectangle has been drawn, double-clicking anywhere on the screen, or pressing the &Enter; button on the keyboard will capture the screenshot.</para>
+					</listitem>
+				</itemizedlist>
+
+				<para>The <guilabel>Capture Delay</guilabel> spin-box allows you to set the delay between pressing the <guibutton>Take New Screenshot</guibutton> (<keycombo action="simul">&Ctrl;<keycap>N</keycap></keycombo>) button and taking the screenshot. This delay can be set in increments of 0.1 seconds, or 100 miliseconds.</para>
+
+				<para>Enabling the <guilabel>On Click</guilabel> checkbox overrides the delay. When this checkbox is enabled, pressing the <guibutton>Take New Screenshot</guibutton> (<keycombo action="simul">&Ctrl;<keycap>N</keycap></keycombo>) button hides the &kscreengenie; window and changes the mouse cursor to a crosshair. The screenshot is captured when the mouse is clicked. Note that you cannot interact with the desktop using the mouse while the cursor is a crosshair, but you can use the keyboard.</para>
+			</sect2>
+
+			<sect2>
+				<title>Capture Options</title>
+
+				<para>The capture options settings allow you to select whether the mouse cursor should be included in the screenshots, and whether to capture window decorations along with the image of a single application window</para>
+
+				<itemizedlist>
+					<listitem>
+						<para>Enabling the <guilabel>Include mouse pointer</guilabel> checkbox includes an image of the mouse pointer in the screenshot.</para>
+					</listitem>
+					<listitem>
+						<para>The <guilabel>Include window titlebar and borders</guilabel> option is only enabled when the <guilabel>Active Window</guilabel> mode is selected in the <guilabel>Capture Area</guilabel> combo-box. Checking this option includes the window borders and decoration in the screenshot, while unchecking it gives an image of only the window contents.</para>
+					</listitem>
+				</itemizedlist>
+			</sect2>
+		</sect1>
+	</chapter>
+
+	<chapter id="additional-functionality">
+		<title>Additional Functionality</title>
+
+		<sect2>
+			<title>Buttons</title>
+
+			<para>There are six buttons located at the bottom of the &kscreengenie; window. Their functions are described below:</para>
+
+			<variablelist>
+				<varlistentry>
+					<term><guibutton>Help</guibutton></term>
+					<listitem>
+						<para>Gives you a menu where you can open the <guimenuitem>&kscreengenie; Handbook</guimenuitem>, report a bug, switch the language for &kscreengenie; or get some more information <guimenuitem>About &kscreengenie;</guimenuitem> and <guimenuitem>About &kde;</guimenuitem>.</para>
+					</listitem>
+				</varlistentry>
+				<varlistentry>
+					<term><guibutton>Send To...</guibutton></term>
+					<listitem>
+						<para>This drop-down menu will allow you to copy the screenshot to the clipboard, or directly open the sscreenshot with all programs that are associated with the PNG (Portable Network Graphics) MIME type. Depending on what programs are installed, you will be able to open and edit the snapshot in your graphics applications or viewers.</para>
+
+						<para>Furthermore, if you have the <application>KIPI Plugins</application> installed, you will be able to print your snapshots, e-mail them and export directly to some social networks and websites.</para>
+					</listitem>
+				</varlistentry>
+				<varlistentry>
+					<term><guibutton>Print</guibutton></term>
+					<listitem>
+						<para>This button opens the standard &kde; print dialog and allows you to quickly print out the screenshot.</para>
+					</listitem>
+				</varlistentry>
+				<varlistentry>
+					<term><guibutton>Save As...</guibutton></term>
+					<listitem>
+						<para>Saves the screenshot to a file in the selected format.</para>
+					</listitem>
+				</varlistentry>
+				<varlistentry>
+					<term><guibutton>Save &amp; Exit</guibutton></term>
+					<listitem>
+						<para>Saves the screenshot as a PNG image in your default Pictures directory and immediately exits the application.</para>
+					</listitem>
+				</varlistentry>
+				<varlistentry>
+					<term><guibutton>Discard</guibutton></term>
+					<listitem>
+						<para>Discards the screenshot and immediately exits the application.</para>
+					</listitem>
+				</varlistentry>
+			</variablelist>
+		</sect2>
+
+		<sect2>
+			<title>Drag and Drop</title>
+			<para>A captured image can be dragged to another application or document. If the application is able to handle images, a copy of the full image is inserted there.</para>
+
+			<para>If you drag a screenshot into a file manager window, a dialog pops up where you can edit the filename and select the image format and the file will be inserted into the actual folder.</para>
+
+			<para>If you drag the screenshot to a text box, the path to the temporary saved file is inserted. This is useful for example to upload a screenshot through web forms or to attach screenshots into bug reports on the <ulink url="https://bugs.kde.org/">&kde; bugtracker</ulink>.</para>
+
+			<para>This works with all clients that do not pick up the image data, but only look for a &URL; in the dragged mimedata.</para>
+		</sect2>
+	</chapter>
+
+	<chapter id="credits">
+		<title>Credits and License</title>
+
+		<para>Program copyright &copy; 2015 &Boudhayan.Gupta; &Boudhayan.Gupta.mail;.</para>
+
+		<para>Portions of the code are based directly on code from the &ksnapshot; project. Copyright &copy; 1997-2011 The &ksnapshot; Developers. Detailed copyright assignment notices are available in the headers in the source code.</para>
+
+		<para>Portions of the code are based directly on code from the &kwin; project. Copyright &copy; 2008, 2013 The &kwin; Developers. Detailed copyright assignment notices are available in the headers in the source code.</para>
+		
+		<para>Documentation based on the original &ksnapshot; documentation:</para>
+
+		<itemizedlist>
+			<listitem>
+				<para>Copyright &copy; 1997-2000 &Richard.J.Moore; &Richard.J.Moore.mail;</para>
+			</listitem>
+			<listitem>
+				<para>Copyright &copy; 2000 &Matthias.Ettrich; &Matthias.Ettrich.mail;</para>
+			</listitem>
+		</itemizedlist>
+
+		<!-- TRANS:CREDIT_FOR_TRANSLATORS -->
+
+		&underFDL;
+		&underGPL;
+	</chapter>
+
+&documentation.index;
+</book>
