Fix typo - sscreenshot -> screenshot

--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -182,7 +182,7 @@
 				<varlistentry>
 					<term><guibutton>Send To...</guibutton></term>
 					<listitem>
-						<para>This drop-down menu will allow you to copy the screenshot to the clipboard, or directly open the sscreenshot with all programs that are associated with the PNG (Portable Network Graphics) MIME type. Depending on what programs are installed, you will be able to open and edit the snapshot in your graphics applications or viewers.</para>
+						<para>This drop-down menu will allow you to copy the screenshot to the clipboard, or directly open the screenshot with all programs that are associated with the PNG (Portable Network Graphics) MIME type. Depending on what programs are installed, you will be able to open and edit the snapshot in your graphics applications or viewers.</para>
 
 						<para>Furthermore, if you have the <application>KIPI Plugins</application> installed, you will be able to print your snapshots, e-mail them and export directly to some social networks and websites.</para>
 					</listitem>
